SQI calculations using Pandas

--- a/docs/_downloads/7d7914439bd2f3b58a3bcf1907c8433d/plot_PeakDetectorsonPPG.ipynb
+++ b/docs/_downloads/7d7914439bd2f3b58a3bcf1907c8433d/plot_PeakDetectorsonPPG.ipynb
@@ -111,6 +111,17 @@
       "source": [
         "print(\"Peak Detector Comparison on IR_ADC\")\n\nIRADC_segment= signals['Filtered_IR_ADC'][2000:5000]\nfor i in range(1,8,1):\n    peaks, troughs = PeakDetector().ppg_detector(IRADC_segment, i)\n\n    sample_range = np.arange(0,3000,1)\n    fig, axes = plt.subplots(nrows=2, ncols=1)\n    axes = axes.flatten() \n    ax = axes[0]\n    ax.plot(sample_range, IRADC_segment)\n    ax.scatter(peaks,IRADC_segment[peaks], color=\"g\", marker=\"v\")\n    ax.scatter(troughs,IRADC_segment[troughs], color=\"r\", marker=\"v\")\n    ax.title.set_text(\"Peak Detector: %s \" %PeakDetectorNames[i-1])\n    \n    ax = axes[1]\n    ax.plot(IRADC_segment[peaks[0]:peaks[1]]) #plotting only one period\n\nplt.show"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "'''\n\nDetector 6 and 7 seem to be performing better overall\n\nNote that the diacrotic notch can be higher than the diastolic peak\nand therefore, cannot be effectively detected by the peak detector.\n'''"
+      ]
     }
   ],
   "metadata": {
