fixing some comments

--- a/docs/_downloads/6b9e327fb08f1bb40f7299b1bf6e106b/plot_SQI_and_clinical_matching.ipynb
+++ b/docs/_downloads/6b9e327fb08f1bb40f7299b1bf6e106b/plot_SQI_and_clinical_matching.ipynb
@@ -94,7 +94,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We then match the test to the w of using indexing and the \"w\" column constructed earlier\n\n"
+        "We then match the event to the specific window using indexing and the \"w\" column constructed earlier.\n\n"
       ]
     },
     {
