multiple records examples added

--- a/docs/_downloads/abd8c771d045642bc8921a9d691844d0/plot_SQI_pandas.ipynb
+++ b/docs/_downloads/abd8c771d045642bc8921a9d691844d0/plot_SQI_pandas.ipynb
@@ -55,7 +55,7 @@
       },
       "outputs": [],
       "source": [
-        "# Generic\nimport os\nimport numpy as np\nimport pandas as pd\nimport matplotlib.pyplot as plt\nfrom scipy import signal\n\n# Scipy\nfrom scipy.stats import skew, kurtosis, entropy\n\n # vitalSQI\nfrom vital_sqi.data.signal_io import PPG_reader\nimport vital_sqi.highlevel_functions.highlevel as sqi_hl\nimport vital_sqi.data.segment_split as sqi_sg\nfrom vital_sqi.common.rpeak_detection import PeakDetector\nfrom vital_sqi.preprocess.band_filter import BandpassFilter\nimport vital_sqi.sqi as sq"
+        "# Generic\nimport os\nimport numpy as np\nimport pandas as pd\nimport matplotlib.pyplot as plt\nfrom scipy import signal\nfrom datetime import datetime\n\n# Scipy\nfrom scipy.stats import skew, kurtosis, entropy\n\n # vitalSQI\nfrom vital_sqi.data.signal_io import PPG_reader\nimport vital_sqi.highlevel_functions.highlevel as sqi_hl\nimport vital_sqi.data.segment_split as sqi_sg\nfrom vital_sqi.common.rpeak_detection import PeakDetector\nfrom vital_sqi.preprocess.band_filter import BandpassFilter\nimport vital_sqi.sqi as sq"
       ]
     },
     {
@@ -73,7 +73,25 @@
       },
       "outputs": [],
       "source": [
-        "# Filepath definition\nfilepath = r'..\\..\\..\\..\\OUCRU\\01NVa_Dengue\\Adults\\01NVa-003-2001\\PPG'\nfilename = r'01NVa-003-2001 Smartcare.csv'\n\n\n#defining constants\ntrim_amount = 300\nhp_filt_params = (1, 1) #(Hz, order)\nlp_filt_params = (20, 4) #(Hz, order)\nfilter_type =  'butter'\nsegment_length = 30\nsampling_rate = 100\n\n#readind PPG data\ndata = PPG_reader(os.path.join(filepath, filename), \n    signal_idx=[\"PLETH\", \"IR_ADC\"],\n    timestamp_idx=[\"TIMESTAMP_MS\"],\n    info_idx=[\"SPO2_PCT\",\"PULSE_BPM\",\"PERFUSION_INDEX\"], sampling_rate=sampling_rate)\n\n\nprint(data)\nprint(data.signals)\nprint(data.sampling_rate)\nprint(data.start_datetime)\nprint(data.wave_type)\nprint(data.signals.shape)\n\n\nplot_range = np.arange(0,1000,1)\nfig, ax = plt.subplots()\nax.plot(plot_range, data.signals[0][0:1000])"
+        "# Filepath definition\nfilepath = r'..\\..\\..\\..\\OUCRU\\01NVa_Dengue\\Adults\\01NVa-003-2001\\PPG'\nfilename = r'01NVa-003-2001 Smartcare.csv'\nfilename_Clinical = r'..\\..\\..\\..\\OUCRU\\Clinical\\v0.0.10\\01nva_data_stacked_corrected.csv'\n\n\n\n#defining constants\ntrim_amount = 300\nhp_filt_params = (1, 1) #(Hz, order)\nlp_filt_params = (20, 4) #(Hz, order)\nfilter_type =  'butter'\nsegment_length = 30\nsampling_rate = 100\n\n#reading Clinical Data\nClinical = pd.read_csv(filename_Clinical)\n\n#readind PPG data\n\ndata = pd.read_csv(os.path.join(filepath, filename))\n\n# data = PPG_reader(os.path.join(filepath, filename), \n#     signal_idx=[\"PLETH\", \"IR_ADC\"],\n#     timestamp_idx=[\"TIMESTAMP_MS\"],\n#     info_idx=[\"SPO2_PCT\",\"PULSE_BPM\",\"PERFUSION_INDEX\"], sampling_rate=sampling_rate)\n\n\n\nprint(data)\nprint(data.PLETH)\nprint(data.IR_ADC)\nprint(data.TIMESTAMP_MS)\nprint(data.SPO2_PCT)\n\nsignals = data[[\"PLETH\", \"IR_ADC\"]]\n\nplot_range = np.arange(0,1000,1)\nfig, ax = plt.subplots()\nax.plot(plot_range, signals.iloc[0:1000, 0])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "fetching ppg_start time\n\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "def find_event_ppg_time(Clinical,Patient):\n    row = Clinical[(Clinical.study_no == Patient) & (Clinical.column == 'event_ppg') & (Clinical.result == 'True')]\n    return row['date'].values"
       ]
     },
     {
@@ -91,7 +109,7 @@
       },
       "outputs": [],
       "source": [
-        "pd.Timedelta.__str__ = lambda x: x._repr_base('all')\n\n#Transposing data.signals to set into columns\nsignals = pd.DataFrame(data.signals.T)\n\n# Include column with index\nsignals = signals.reset_index()\n\n\nsignals['timedelta'] = \\\n    pd.to_timedelta(signals.index / sampling_rate, unit='s')\n\n# Set the timedelta index (keep numeric index too)\nsignals = signals.set_index('timedelta')\n\n# Rename column to avoid confusion\nsignals = signals.rename(columns={'index': 'idx'})\n\nprint(\"Raw Signals:\")\nprint(signals)\n\n#Plotting\nfig, axes = plt.subplots(nrows=2, ncols=1)\naxes = axes.flatten()\nsignals[0].plot(ax=axes[0])\nsignals[1].plot(ax=axes[1])"
+        "pd.Timedelta.__str__ = lambda x: x._repr_base('all')\n\n#Transposing data.signals to set into columns\n#signals = pd.DataFrame(data.signals.T)\n\n# Include column with index\nsignals = signals.reset_index()\n\nsignals['timedelta'] = pd.to_timedelta(data.TIMESTAMP_MS, unit='ms')\n\nPPG_start_date = find_event_ppg_time(Clinical, filename.split()[0][-8:])\n\nPPG_start_date = datetime.strptime(PPG_start_date[0], '%Y-%m-%d %H:%M:%S')\n\nsignals['PPG_Datetime'] = pd.to_datetime(PPG_start_date)\nsignals['PPG_Datetime']+= pd.to_timedelta(signals.timedelta)\n\n# Set the timedelta index (keep numeric index too)\nsignals = signals.set_index('timedelta')\n\n# Rename column to avoid confusion\nsignals = signals.rename(columns={'index': 'idx'})\n\nprint(\"Raw Signals:\")\nprint(signals)\n\n#Plotting\nfig, axes = plt.subplots(nrows=2, ncols=1)\naxes = axes.flatten()\nsignals.iloc[:,1].plot(ax=axes[0])\nsignals.iloc[:,2].plot(ax=axes[1])"
       ]
     },
     {
@@ -109,7 +127,7 @@
       },
       "outputs": [],
       "source": [
-        "#Defining the 5 minute offset\noffset = pd.Timedelta(minutes=5)\n\n#Indexes - adopted from example\nidxs = (signals.index > offset) & \\\n        (signals.index < signals.index[-1] - offset)\n\n#Trimming\nsignals = signals[idxs]"
+        "#Defining the 5 minute offset\noffset = pd.Timedelta(minutes=5)\n\n#Indexes - adopted from example\nidxs = (signals.index > offset) & \\\n        (signals.index < signals.index[-1] - offset)\n\n#Trimming\nsignals = signals[idxs]\n\nprint(signals)"
       ]
     },
     {
@@ -138,7 +156,7 @@
       },
       "outputs": [],
       "source": [
-        "'''\nBand-pass filtering can be adjusted, maybe use a lower low-pass\ncutoff frequency @15-17Hz\n\n'''\n#Band pass filtering function\ndef bpf(signal):\n    hp_filt_params = (1, 1) #(Cutoff Hz, order)\n    lp_filt_params = (20, 4) #( Cutoff Hz, order)\n    sampling_rate = 100\n    filter = BandpassFilter(band_type='butter', fs=sampling_rate)\n    filtered_signal = filter.signal_highpass_filter(signal, cutoff=hp_filt_params[0], order=hp_filt_params[1])\n    filtered_signal = filter.signal_lowpass_filter(filtered_signal, cutoff=lp_filt_params[0], order=lp_filt_params[1])\n    return filtered_signal\n\n#Band-pass filtered signals\nsignals['0_bpf'] = bpf(signals[0])\nsignals['1_bpf'] = bpf(signals[1])\n\nprint('Raw and Filtered Signals:')\nprint(signals)\n\nfig, axes = plt.subplots(nrows=2, ncols=1)\naxes = axes.flatten()\nsignals['0_bpf'].plot(ax=axes[0])\nsignals['1_bpf'].plot(ax=axes[1])"
+        "'''\nBand-pass filtering can be adjusted, maybe use a lower low-pass\ncutoff frequency @15-17Hz\n\n'''\n#Band pass filtering function\ndef bpf(signal):\n    hp_filt_params = (1, 1) #(Cutoff Hz, order)\n    lp_filt_params = (20, 4) #( Cutoff Hz, order)\n    sampling_rate = 100\n    filter = BandpassFilter(band_type='butter', fs=sampling_rate)\n    filtered_signal = filter.signal_highpass_filter(signal, cutoff=hp_filt_params[0], order=hp_filt_params[1])\n    filtered_signal = filter.signal_lowpass_filter(filtered_signal, cutoff=lp_filt_params[0], order=lp_filt_params[1])\n    return filtered_signal\n\n#Band-pass filtered signals\nsignals['PLETH_bpf'] = bpf(signals.iloc[:,1])\nsignals['IR_ADC_bpf'] = bpf(signals.iloc[:,2])\n\nprint('Raw and Filtered Signals:')\nprint(signals)\n\nfig, axes = plt.subplots(nrows=2, ncols=1)\naxes = axes.flatten()\nsignals['PLETH_bpf'].plot(ax=axes[0])\nsignals['IR_ADC_bpf'].plot(ax=axes[1])"
       ]
     },
     {
@@ -156,7 +174,7 @@
       },
       "outputs": [],
       "source": [
-        "def PeakDetection(x):\n    detector = PeakDetector()\n    peaks, troughs = detector.ppg_detector(x, 7) #6 and 7 work the best\n    return peaks, troughs\n\n#Defining SQI Functions\n\ndef snr(x):\n    #Signal to noise ratio\n    #needs raw signal\n    return np.mean(sq.standard_sqi.signal_to_noise_sqi(x))\n\ndef zcr(x):\n    #Zero Crossing Rate\n    #Needs filtered signal\n    return 0.5 * np.mean(np.abs(np.diff(np.sign(x))))\n\ndef mcr(x):\n    #Mean Crossing Rate\n    #needs raw signal\n    return zcr(x - np.mean(x))\n\ndef perfusion(x,y):\n    return (np.max(y) - np.min(y)) / np.abs(np.mean(x)) * 100\n\ndef correlogram(x):\n    #Correlogram\n    #Needs filtered signal\n    return sq.rpeaks_sqi.correlogram_sqi(x)\n\n#Calculating peaks and troughs using peakdetector function for both filtered signals\npeak_list_0, trough_list_0 = PeakDetection(signals['0_bpf'])\npeak_list_1, trough_list_1 = PeakDetection(signals['1_bpf'])\n\n'''\nMSW values that are being calculated are too small, maybe peakdetectors need\nto be revisited?\n'''\ndef msq(x,peaks):\n    #Dynamic Time Warping\n    #Requires Filtered Signal and peaks\n     # Return\n     return sq.standard_sqi.msq_sqi(x, peaks_1=peaks, peak_detect2=6)\n\n'''\nBelow function is outputting an error, needs revisiting\n'''\n# def dtw(x,troughs):\n#     #Dynamic Time Warping\n#     #Requires Filtered Signal and troughs and template selection 0-3 (0-2 for PPG)\n#     # Per beat\n#     dtw_list = sq.standard_sqi.per_beat_sqi(sqi_func=sq.dtw_sqi, troughs=troughs, signal=x, taper=True, template_type=1)\n#     # Return mean and standard deviation\n#     return [np.mean(dtw_list), np.std(dtw_list)]"
+        "def PeakDetection(x):\n    detector = PeakDetector()\n    peaks, troughs = detector.ppg_detector(x, 7) #6 and 7 work the best\n    return peaks, troughs\n\n#Defining SQI Functions\n\ndef snr(x):\n    #Signal to noise ratio\n    #needs raw signal\n    return np.mean(sq.standard_sqi.signal_to_noise_sqi(x))\n\ndef zcr(x):\n    #Zero Crossing Rate\n    #Needs filtered signal\n    return 0.5 * np.mean(np.abs(np.diff(np.sign(x))))\n\ndef mcr(x):\n    #Mean Crossing Rate\n    #needs raw signal\n    return zcr(x - np.mean(x))\n\ndef perfusion(x,y):\n    return (np.max(y) - np.min(y)) / np.abs(np.mean(x)) * 100\n\ndef correlogram(x):\n    #Correlogram\n    #Needs filtered signal\n    return sq.rpeaks_sqi.correlogram_sqi(x)\n\n#Calculating peaks and troughs using peakdetector function for both filtered signals\npeak_list_0, trough_list_0 = PeakDetection(signals['PLETH_bpf'])\npeak_list_1, trough_list_1 = PeakDetection(signals['IR_ADC_bpf'])\n\n'''\nMSW values that are being calculated are too small, maybe peakdetectors need\nto be revisited?\n'''\ndef msq(x,peaks):\n    #Dynamic Time Warping\n    #Requires Filtered Signal and peaks\n     # Return\n     return sq.standard_sqi.msq_sqi(x, peaks_1=peaks, peak_detect2=6)\n\n'''\nBelow function is outputting an error, needs revisiting\n'''\n# def dtw(x,troughs):\n#     #Dynamic Time Warping\n#     #Requires Filtered Signal and troughs and template selection 0-3 (0-2 for PPG)\n#     # Per beat\n#     dtw_list = sq.standard_sqi.per_beat_sqi(sqi_func=sq.dtw_sqi, troughs=troughs, signal=x, taper=True, template_type=1)\n#     # Return mean and standard deviation\n#     return [np.mean(dtw_list), np.std(dtw_list)]"
       ]
     },
     {
@@ -174,7 +192,7 @@
       },
       "outputs": [],
       "source": [
-        "def sqi_all(x,raw,filtered,peaks,troughs):\n    \n    #Computing  all SQIs using the functions above\n    \n    # Information\n    dinfo = {\n        'first': x.idx.iloc[0],\n        'last': x.idx.iloc[-1],\n        'skew': skew(x[raw]),\n        'entropy': entropy(x[raw]),\n        'kurtosis': kurtosis(x[raw]),\n        'snr': snr(x[raw]),\n        'mcr': mcr(x[raw]),\n        'zcr': zcr(x[filtered]),\n        'msq': msq(x[filtered],peaks),\n        'perfusion': perfusion(x[raw], x[filtered]),\n        'correlogram': correlogram(x[filtered]),\n        #'dtw': dtw(x[filtered],troughs)\n    }\n    '''\n    When using dtw an empty signal error is presented that\n    needs fixing, not sure why it does that\n    '''\n    # Return\n    return pd.Series(dinfo)"
+        "def sqi_all(x,raw,filtered,peaks,troughs):\n    \n    #Computing  all SQIs using the functions above\n    \n    # Information\n    dinfo = {\n        'PPG_w_s': x.PPG_Datetime.iloc[0],\n        'PPG_w_f': x.PPG_Datetime.iloc[-1],\n        'first': x.idx.iloc[0],\n        'last': x.idx.iloc[-1],\n        'skew': skew(x[raw]),\n        'entropy': entropy(x[raw]),\n        'kurtosis': kurtosis(x[raw]),\n        'snr': snr(x[raw]),\n        'mcr': mcr(x[raw]),\n        'zcr': zcr(x[filtered]),\n        'msq': msq(x[filtered],peaks),\n        'perfusion': perfusion(x[raw], x[filtered]),\n        'correlogram': correlogram(x[filtered]),\n        #'dtw': dtw(x[filtered],troughs)\n    }\n    '''\n    When using dtw an empty signal error is presented that\n    needs fixing, not sure why it does that\n    '''\n    # Return\n    return pd.Series(dinfo)"
       ]
     },
     {
@@ -192,7 +210,7 @@
       },
       "outputs": [],
       "source": [
-        "sqis_0 = signals.groupby(pd.Grouper(freq='30s')).apply(lambda x: sqi_all(x, 0,'0_bpf', peak_list_0, trough_list_0))\nsqis_1 = signals.groupby(pd.Grouper(freq='30s')).apply(lambda x: sqi_all(x, 1,'1_bpf', peak_list_1, trough_list_1))\n\n#Displaying the SQIs per signal\nprint(\"SQIs Signal 0 (Pleth):\")\nsqis_0\nprint(sqis_0)\n\nprint(\"SQIs Signal 1 (IR_ADC):\")\nsqis_1\nprint(sqis_1)\nsqis_1 = sqis_1.drop(['first','last'], axis = 1)\n\n\n# Add window id to identify point of shock more easily\nsqis_1['w'] = np.arange(sqis_1.shape[0])"
+        "sqis_0 = signals.groupby(pd.Grouper(freq='30s')).apply(lambda x: sqi_all(x, 'PLETH','PLETH_bpf', peak_list_0, trough_list_0))\nsqis_1 = signals.groupby(pd.Grouper(freq='30s')).apply(lambda x: sqi_all(x, 'IR_ADC','IR_ADC_bpf', peak_list_1, trough_list_1))\n\n#Displaying the SQIs per signal\nprint(\"SQIs Signal 0 (Pleth):\")\nsqis_0\nprint(sqis_0)\n\nprint(\"SQIs Signal 1 (IR_ADC):\")\nsqis_1\nprint(sqis_1)\nsqis_1 = sqis_1.drop(['first','last', 'PPG_w_s', 'PPG_w_f'], axis = 1)\n\n\n# Add window id to identify point of shock more easily\nsqis_1['w'] = np.arange(sqis_1.shape[0])"
       ]
     },
     {
@@ -210,7 +228,18 @@
       },
       "outputs": [],
       "source": [
-        "#Merging SQIs of different signals from the same record (Pleth and IR_ADC) \nSignal_SQIs = sqis_0.merge(sqis_1, on='timedelta', suffixes=('_0', '_1'))\n\n#Automatically fetching the study_no from the filename and including it in the DataFrame\nSignal_SQIs['study_no'] = filename.split()[0][-8:]\nprint(Signal_SQIs)\n\n# Saving the SQIs to a CSV file\nSignal_SQIs.to_csv(r'..\\..\\..\\..\\OUCRU\\01NVa_Dengue\\Adults\\01NVa-003-2001\\SQI.csv')\n\n'''\n#Running Some Abstract Checks to Verify Results etc.\n\nprint(perfusion(signals[0][0:3000], signals['0_bpf'][0:3000]))\n\n'''"
+        "#Merging SQIs of different signals from the same record (Pleth and IR_ADC) \nSignal_SQIs = sqis_0.merge(sqis_1, on='timedelta', suffixes=('_0', '_1'))\n\n#Automatically fetching the study_no from the filename and including it in the DataFrame\nSignal_SQIs['study_no'] = filename.split()[0][-8:]\nprint(Signal_SQIs)\n\n# Saving the SQIs to a CSV file\nSignal_SQIs.to_csv(r'..\\..\\..\\..\\OUCRU\\Outputs\\SQI.csv')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "'''\n#Running Some Abstract Checks to Verify Results etc.\n\nprint(perfusion(signals[0][0:3000], signals['PLETH_bpf'][0:3000]))\n\n'''"
       ]
     },
     {
