removed unfinished in title

--- a/docs/_downloads/caea89d33465c464ac82672df867b7d3/plot_SQI_and_clinical_matching_multiple_patients.ipynb
+++ b/docs/_downloads/caea89d33465c464ac82672df867b7d3/plot_SQI_and_clinical_matching_multiple_patients.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Matching SQI Dataframe Window to Clinical Time of \"Event\" for Multiple Records [Unfinished]\nMatching SQI Dataframe Window to Clinical Time of \"Event\" for Multiple Records\n"
+        "\n# Matching SQI Dataframe Window to Clinical Time of \"Event\" for Multiple Records\nMatching SQI Dataframe Window to Clinical Time of \"Event\" for Multiple Records\n"
       ]
     },
     {
