--- a/docs/_downloads/1f0fdaa86dc5936dbdeca7cea0314cae/plot_SQI_Pandas_on_Multiple_Patients.ipynb
+++ b/docs/_downloads/1f0fdaa86dc5936dbdeca7cea0314cae/plot_SQI_Pandas_on_Multiple_Patients.ipynb
@@ -51,7 +51,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# DEFINING FUNCTIONS\n\n"
+        "# Defining Functions\n\n"
       ]
     },
     {
@@ -63,6 +63,13 @@
       "outputs": [],
       "source": [
         "#find the start of PPG from clinical Data\ndef find_event_ppg_time(Clinical,Patient):\n    row = Clinical[(Clinical.study_no == Patient) & (Clinical.column == 'event_ppg') & (Clinical.result == 'True')]\n    return row['date'].values\n\n#======================================================\n\n# Band-pass filtering\n\n'''\nBand-pass filtering can be adjusted, maybe use a lower low-pass\ncutoff frequency @15-17Hz\n\n'''\n#Band pass filtering function\ndef bpf(signal):\n    hp_filt_params = (1, 1) #(Cutoff Hz, order)\n    lp_filt_params = (20, 4) #( Cutoff Hz, order)\n    sampling_rate = 100\n    filter = BandpassFilter(band_type='butter', fs=sampling_rate)\n    filtered_signal = filter.signal_highpass_filter(signal, cutoff=hp_filt_params[0], order=hp_filt_params[1])\n    filtered_signal = filter.signal_lowpass_filter(filtered_signal, cutoff=lp_filt_params[0], order=lp_filt_params[1])\n    return filtered_signal\n\n#======================================================\n\n# SQI Functions Definitions\n\ndef PeakDetection(x):\n    detector = PeakDetector()\n    peaks, troughs = detector.ppg_detector(x, 7) #6 and 7 work the best\n    return peaks, troughs\n\n#Defining SQI Functions\n\ndef snr(x):\n    #Signal to noise ratio\n    #needs raw signal\n    return np.mean(sq.standard_sqi.signal_to_noise_sqi(x))\n\ndef zcr(x):\n    #Zero Crossing Rate\n    #Needs filtered signal\n    return 0.5 * np.mean(np.abs(np.diff(np.sign(x))))\n\ndef mcr(x):\n    #Mean Crossing Rate\n    #needs raw signal\n    return zcr(x - np.mean(x))\n\ndef perfusion(x,y):\n    return (np.max(y) - np.min(y)) / np.abs(np.mean(x)) * 100\n\ndef correlogram(x):\n    #Correlogram\n    #Needs filtered signal\n    return sq.rpeaks_sqi.correlogram_sqi(x)\n\n'''\nMSQ values that are being calculated are too small, maybe peakdetectors need\nto be revisited?\n'''\ndef msq(x,peaks):\n    #Dynamic Time Warping\n    #Requires Filtered Signal and peaks\n     # Return\n     return sq.standard_sqi.msq_sqi(x, peaks_1=peaks, peak_detect2=6)\n\n'''\nBelow function is outputting an error, needs revisiting\n'''\n# def dtw(x,troughs):\n#     #Dynamic Time Warping\n#     #Requires Filtered Signal and troughs and template selection 0-3 (0-2 for PPG)\n#     # Per beat\n#     dtw_list = sq.standard_sqi.per_beat_sqi(sqi_func=sq.dtw_sqi, troughs=troughs, signal=x, taper=True, template_type=1)\n#     # Return mean and standard deviation\n#     return [np.mean(dtw_list), np.std(dtw_list)]\n\n#======================================================\n\n# Function Computing SQIs\n\ndef sqi_all(x,raw,filtered,peaks,troughs):\n    \n    #Computing  all SQIs using the functions above\n    \n    # Information\n    dinfo = {\n        'PPG_w_s': x.PPG_Datetime.iloc[0], #timedate window start\n        'PPG_w_f': x.PPG_Datetime.iloc[-1], #timedate window finish\n        'first': x.idx.iloc[0],\n        'last': x.idx.iloc[-1],\n        'skew': skew(x[raw]),\n        'entropy': entropy(x[raw]),\n        'kurtosis': kurtosis(x[raw]),\n        'snr': snr(x[raw]),\n        'mcr': mcr(x[raw]),\n        'zcr': zcr(x[filtered]),\n        'msq': msq(x[filtered],peaks),\n        'perfusion': perfusion(x[raw], x[filtered]),\n        'correlogram': correlogram(x[filtered]),\n        #'dtw': dtw(x[filtered],troughs)\n    }\n    '''\n    When using dtw an empty signal error is presented that\n    needs fixing, not sure why it does that\n    '''\n    # Return\n    return pd.Series(dinfo)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Loop calculating SQIs of multiple records and concatenating results into a single dataframe\n\n"
       ]
     },
     {
